# src/main/kotlin/controller/settings/dto/response/SettingsResponseDto.kt
@@ -1,0 +1,9 @@
+package pl.dev.bkwiatkowski.controller.settings.dto.response
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class SettingsResponseDto(
+  val username: String,
+)
+
